[tool.poetry]
name = "ack-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
boto3 = "~1.38.17"
mypy-boto3-dynamodb = "^1.26.164"
freezegun      = "^1.5.1"
moto           = "~5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
