[tool.poetry]
name        = "backend"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
readme      = "README.md"
packages    = [{include = "src"}]

[tool.poetry.dependencies]
python                  = "~3.11"
"fhir.resources"        = "~7.0.2"
boto3                   = "~1.38.42"
boto3-stubs-lite        = {extras = ["dynamodb"], version = "~1.38.42"}
aws-lambda-typing       = "~2.20.0"
redis                   = "^4.6.0"
moto                    = "^5.1.6"
requests                = "~2.32.4"
responses               = "~0.25.7"
pydantic                = "~1.10.13"
pyjwt                   = "~2.10.1"
cryptography            = "~42.0.4"
cffi                    = "~1.17.1"
jsonpath-ng             = "^1.6.0"
simplejson              = "^3.19.2"
structlog               = "^24.1.0"
python-stdnum           = "^2.1"
freezegun               = "^1.5.1"
coverage                = "^7.9.1"

[build-system]
requires      = ["poetry-core ~= 1.5.0"]
build-backend = "poetry.core.masonry.api"
