[tool.poetry]
name = "delta-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "~3.11"
boto3 = "~1.38.35"
mypy-boto3-dynamodb = "^1.26.164"
moto = "~5.1.5"
python-stdnum = "^2.1"
coverage = "^7.9.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
