[tool.poetry]
name = "e2e"
version = "0.1.0"
description = "End-to-end tests for immunization-fhir-api"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
boto3 = "^1.34.57"
mypy-boto3-dynamodb = "^1.34.57"


[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.3"
lxml = "~4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
