[tool.poetry]
name = "e2e"
version = "0.1.0"
description = "End-to-end tests for immunization-fhir-api"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
boto3 = "^1.38.29"
mypy-boto3-dynamodb = "^1.38.4"
simplejson = "^3.20.1"

[tool.poetry.group.dev.dependencies]
requests = "^2.32.3"
pyjwt = "^2.10.1"
cryptography = "^42.0.3"
lxml = "~4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
