[tool.poetry]
name = "filenameprocessor"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "~3.11"
"fhir.resources" = "~7.0.2"
boto3 = "~1.38.42"
boto3-stubs-lite = { extras = ["dynamodb"], version = "~1.38.42" }
aws-lambda-typing = "~2.20.0"
moto = "^4"
requests = "~2.32.4"
responses = "~0.25.7"
pydantic = "~1.10.13"
pyjwt = "~2.10.1"
cryptography = "~42.0.4"
cffi = "~1.17.1"
jsonpath-ng = "^1.6.0"
simplejson = "^3.20.1"
structlog = "^24.1.0"
redis = "^5.1.1"
coverage = "^7.9.1"
freezegun = "^1.5.2"
fakeredis = "^2.30.1" 

[build-system]
requires = ["poetry-core >= 1.5.0"]
build-backend = "poetry.core.masonry.api"