[tool.poetry]
name = "mesh-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages    = [{include = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
boto3 = "~1.38.35"
mypy-boto3-dynamodb = "^1.38.4"
moto = "~5.1.5"
coverage = "^7.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
