[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities for NHS Immunisation FHIR API"
authors = [
    {name = "nhsdevws",email = "stephen.wates1@nhs.net"}
]

[tool.poetry]
name = "shared"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [
    {include = "common", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.11"
boto3 = "~1.38.29"
mypy-boto3-dynamodb = "^1.26.164"
moto = "~5.1.5"
python-stdnum = "^2.1"
coverage = "^7.8.0"
redis = "^4.6.0"
cache = "^1.0.3"
pyjwt = "^2.10.1"

[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
